@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>  
   <groupId>Kotlin</groupId>  
   <artifactId>kotlin.netbeans.plugin</artifactId>  
-  <version>0.3.1-SNAPSHOT</version>
+  <version>0.3.2-SNAPSHOT</version>
   <packaging>nbm</packaging>  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -89,11 +89,19 @@
           <useDefaultManifestFile>true</useDefaultManifestFile> 
         </configuration> 
       </plugin>  
-      <plugin> 
-        <groupId>org.apache.maven.plugins</groupId>  
-        <artifactId>maven-surefire-plugin</artifactId>  
-        <version>2.15</version> 
-      </plugin> 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.15</version>
+        <configuration>
+          <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED
+            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens java.base/sun.misc=ALL-UNNAMED
+            --add-opens java.base/java.util=ALL-UNNAMED
+          </argLine>
+        </configuration>
+      </plugin>
     </plugins> 
   </build>
   
@@ -144,12 +152,8 @@
       <version>1.0</version>  
       <type>jar</type> 
     </dependency>
-    <dependency> 
-      <groupId>org.jetbrains.kotlin</groupId>  
-      <artifactId>asm</artifactId>  
-      <version>1.0</version>  
-      <type>jar</type> 
-    </dependency>
+    <!-- lib/asm-all.jar removed: org.jetbrains.org.objectweb.asm is bundled in kotlin-compiler-1.3.72.jar -->
+    <!-- The old asm-all.jar only supported ASM4/ASM5 and shadowed the ASM7-capable version in kotlin-compiler -->
     
     <dependency>
         <groupId>org.jetbrains.kotlin</groupId>
@@ -552,7 +556,7 @@
     <dependency> 
       <groupId>com.google.guava</groupId>  
       <artifactId>guava</artifactId>  
-      <version>14.0</version> 
+      <version>28.2-jre</version>
     </dependency>
     <dependency>
       <groupId>org.netbeans.api</groupId>
